--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "helmet": "^8.1.0",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
-    "multer": "^2.0.1"
+    "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "socket.io": "^4.8.1",
+    "stripe": "^18.3.0"
   }
 }
